# tapioca-hunter

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
inc/: camera.h  collision_data.h  collision_mask.h  ending.h  enemies.h  enemies_init.h  game_math.h  gameplay.h  ggj_debug.h  hitboxes.h  input.h  level.h  main_menu.h  player.h  scene_manager.h  splash.h  tapiocas.h
res/: hitboxes.h  resources.h  resources.res
res/kras/: game over.kra  inimigo.kra  logo.kra  personagem01.kra  tileset.kra  vencedor.kra
res/music/: ending.vgm  play.vgm  title.vgm
res/sfx/: death.pcm
res/tiled/: export.csv  game_ts.tsx  ghost.tx  map.tmx  objects.lua
scripts/: generate_enemies_init.lua  generate_hitboxes.lua  generate_hitboxes_code.lua  hitboxes_template.h
scripts/mars/: build.sh
scripts/templates/: enemies_init_template.c  enemies_init_template.h
src/: camera.c  ending.c  enemies.c  enemies_init.c  game_math.c  gameplay.c  hitboxes.c  input.c  main.c  main_menu.c  player.c  scene_manager.c  splash.c  tapiocas.c
src/boot/: rom_head.c
